--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
 		<dependency>
 			<groupId>org.springframework.session</groupId>
 			<artifactId>spring-session</artifactId>
+			<version>1.3.5.RELEASE</version>
 		</dependency>
 	</dependencies>
 
