--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #
 # Database properties
 #
-spring.datasource.url=jdbc:mysql://localhost:3306/bugtracker?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT
+spring.datasource.url=jdbc:mysql://bc9b7de587e26b:f4dd8004@eu-cdbr-west-02.cleardb.net/heroku_9a89e9c98f1f78f?reconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT
 
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
+spring.datasource.username=bc9b7de587e26b
+spring.datasource.password=f4dd8004
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
