--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.servlet.multipart.max-request-size=5MB
 
 spring.servlet.multipart.enabled=true
 
+spring.thymeleaf.prefix=classpath*:/templates/
+
 storage.location=./uploads
 
 default.profile.pic=User-01.jpg
