--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.servlet.multipart.max-request-size=5MB
 
 spring.servlet.multipart.enabled=true
 
-spring.thymeleaf.prefix=classpath:/main/templates/
+spring.thymeleaf.prefix=classpath:./templates/
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
