--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,16 @@ spring.servlet.multipart.max-request-size=5MB
 
 spring.servlet.multipart.enabled=true
 
+# ===============================
+# = Thymeleaf configurations
+# ===============================
+spring.thymeleaf.enabled=true
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
+
 storage.location=./uploads
 
 default.profile.pic=User-01.jpg
