--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,12 +14,12 @@ spring.servlet.multipart.enabled=true
 # ===============================
 # = Thymeleaf configurations
 # ===============================
-spring.thymeleaf.enabled=true
-spring.thymeleaf.check-template-location=true
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.cache=false
+#spring.thymeleaf.enabled=true
+#spring.thymeleaf.check-template-location=true
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
+#spring.thymeleaf.encoding=UTF-8
+#spring.thymeleaf.cache=false
 
 storage.location=./uploads
 
