--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.servlet.multipart.enabled=true
 #spring.thymeleaf.suffix=.html
 #spring.thymeleaf.encoding=UTF-8
 #spring.thymeleaf.cache=false
+spring.thymeleaf.templateResolverOrder=1
 
 storage.location=./uploads
 
