fixing thymeleaf to work on Heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,11 +16,11 @@ spring.servlet.multipart.enabled=true
 # ===============================
 #spring.thymeleaf.enabled=true
 #spring.thymeleaf.check-template-location=true
-#spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.prefix=classpath:/templates/
 #spring.thymeleaf.suffix=.html
 #spring.thymeleaf.encoding=UTF-8
 #spring.thymeleaf.cache=false
-spring.thymeleaf.templateResolverOrder=1
+#spring.thymeleaf.templateResolverOrder=1
 
 storage.location=./uploads
 
