--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,5 @@ spring.thymeleaf.prefix=classpath:/templates/
 #spring.thymeleaf.cache=false
 #spring.thymeleaf.templateResolverOrder=1
 
-storage.location=./uploads
+storage.location=./uploads/
 default.profile.pic=User-01.jpg
