--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,16 +7,17 @@ spring.datasource.password=f4dd8004
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
-
 spring.servlet.multipart.enabled=true
+
 # = Thymeleaf configurations
-#spring.thymeleaf.enabled=true
-#spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
-#spring.thymeleaf.suffix=.html
-#spring.thymeleaf.encoding=UTF-8
-#spring.thymeleaf.cache=false
-#spring.thymeleaf.templateResolverOrder=1
+
 
 storage.location=./uploads
 default.profile.pic=User-01.jpg
+
+# Amazon S3 Bucket
+amazonProperties.endpointURL=https://s3.us-east-2.amazonaws.com
+amazonProperties.accessKey=AKIAUJQKPU2FW4FZFZV4
+amazonProperties.secretKey=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
+amazonProperties.bucketName=kfryc
