Changed deployment server and database from Heroku to AWS to increase performance.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #
 # Database properties
 #
-spring.datasource.url=jdbc:mysql://bc9b7de587e26b:f4dd8004@eu-cdbr-west-02.cleardb.net/heroku_9a89e9c98f1f78f?reconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT
-spring.datasource.username=bc9b7de587e26b
+spring.datasource.url=jdbc:mysql://bugtracker.cby0idqfmchl.eu-central-1.rds.amazonaws.com/bugtracker
+spring.datasource.username=bugtrackerAdmin
 spring.datasource.password=f4dd8004
 
 spring.servlet.multipart.max-file-size=5MB
@@ -21,3 +21,6 @@ amazonProperties.endpointURL=https://s3.us-east-2.amazonaws.com
 amazonProperties.accessKey=AKIAUJQKPU2FW4FZFZV4
 amazonProperties.secretKey=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
 amazonProperties.bucketName=kfryc
+
+#Serer port for Elastic Bean
+server.port=5000
