--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #
 # Database properties
 #
-spring.datasource.url=jdbc:mysql://bugtracker.cby0idqfmchl.eu-central-1.rds.amazonaws.com/bugtracker
-spring.datasource.username=bugtrackerAdmin
-spring.datasource.password=f4dd8004
+spring.datasource.url=address
+spring.datasource.username=username
+spring.datasource.password=password
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
