--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,8 +18,8 @@ default.profile.pic=User-01.jpg
 
 # Amazon S3 Bucket
 amazonProperties.endpointURL=https://s3.us-east-2.amazonaws.com
-amazonProperties.accessKey=AKIAUJQKPU2FW4FZFZV4
-amazonProperties.secretKey=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
+amazonProperties.accessKey=accessKey
+amazonProperties.secretKey=secretKey
 amazonProperties.bucketName=kfryc
 
 #Serer port for Elastic Bean
