Enabling Lombok and cleaning code from getters and setters

--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,13 @@
 			<artifactId>aws-java-sdk-s3</artifactId>
 			<version>1.11.732</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.12</version>
+			<scope>provided</scope>
+		</dependency>
 
 
 	</dependencies>
